export const snapshot = {};

snapshot[`TransportSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  enum: [
    "websocket",
    "twilio",
  ],
  type: "string",
}
`;

snapshot[`AgentConfigSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: false,
  properties: {
    builtinTools: {
      items: {
        enum: [
          "web_search",
          "visit_webpage",
          "fetch_json",
          "run_code",
          "user_input",
          "final_answer",
        ],
        type: "string",
      },
      type: "array",
    },
    greeting: {
      type: "string",
    },
    instructions: {
      type: "string",
    },
    name: {
      type: "string",
    },
    prompt: {
      type: "string",
    },
    voice: {
      type: "string",
    },
  },
  required: [
    "instructions",
    "greeting",
    "voice",
  ],
  type: "object",
}
`;

snapshot[`ToolSchemaSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: false,
  properties: {
    description: {
      type: "string",
    },
    name: {
      type: "string",
    },
    parameters: {
      additionalProperties: {},
      propertyNames: {
        type: "string",
      },
      type: "object",
    },
  },
  required: [
    "name",
    "description",
    "parameters",
  ],
  type: "object",
}
`;

snapshot[`DeployBodySchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: false,
  properties: {
    client: {
      maxLength: 10000000,
      minLength: 1,
      type: "string",
    },
    config: {
      additionalProperties: false,
      properties: {
        builtinTools: {
          items: {
            enum: [
              "web_search",
              "visit_webpage",
              "fetch_json",
              "run_code",
              "user_input",
              "final_answer",
            ],
            type: "string",
          },
          type: "array",
        },
        greeting: {
          type: "string",
        },
        instructions: {
          type: "string",
        },
        name: {
          type: "string",
        },
        prompt: {
          type: "string",
        },
        voice: {
          type: "string",
        },
      },
      required: [
        "instructions",
        "greeting",
        "voice",
      ],
      type: "object",
    },
    env: {
      additionalProperties: {
        type: "string",
      },
      propertyNames: {
        type: "string",
      },
      type: "object",
    },
    toolSchemas: {
      items: {
        additionalProperties: false,
        properties: {
          description: {
            type: "string",
          },
          name: {
            type: "string",
          },
          parameters: {
            additionalProperties: {},
            propertyNames: {
              type: "string",
            },
            type: "object",
          },
        },
        required: [
          "name",
          "description",
          "parameters",
        ],
        type: "object",
      },
      type: "array",
    },
    transport: {
      anyOf: [
        {
          enum: [
            "websocket",
            "twilio",
          ],
          type: "string",
        },
        {
          items: {
            enum: [
              "websocket",
              "twilio",
            ],
            type: "string",
          },
          type: "array",
        },
      ],
    },
    worker: {
      maxLength: 10000000,
      minLength: 1,
      type: "string",
    },
  },
  required: [
    "env",
    "worker",
    "client",
    "config",
  ],
  type: "object",
}
`;

snapshot[`EnvSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: {},
  properties: {
    ASSEMBLYAI_API_KEY: {
      minLength: 1,
      type: "string",
    },
    LLM_MODEL: {
      type: "string",
    },
  },
  required: [
    "ASSEMBLYAI_API_KEY",
  ],
  type: "object",
}
`;
